# buildowl

./: Makefile  README.md  mytest001.owl  pyproject.toml
buildowl/: __init__.py
buildowl/autorels/: README.md  __init__.py
buildowl/autorels/bp/: __init__.py  autorels_orchestrator.py
buildowl/autorels/svc/: __init__.py  find_implies_relationships.py  find_requires_relationships.py  generate_relationships_ttl.py
buildowl/autorels/tests/: test_autorels_orchestrator.py  test_find_implies_relationships.py  test_find_requires_relationships.py
buildowl/autosyns/: README.md
buildowl/autosyns/bp/: __init__.py  autosyns_orchestrator.py
buildowl/autosyns/dmo/: __init__.py  openai_cache_writer.py  openai_completion.py  openai_connector.py  openai_event_executor.py  openai_output_extractor.py
buildowl/autosyns/dto/: __init__.py  openai_cache.py
buildowl/autosyns/svc/: __init__.py  generate_inflection_call.py
buildowl/autosyns/tests/: test_autosyns_orchestrator.py  test_generate_inflection_call.py
buildowl/autotaxo/: README.md
buildowl/autotaxo/bp/: autotaxo_orchestrator.py
buildowl/autotaxo/dmo/: __init__.py  stopword_filter.py  textacy_keyterm_extractor.py  textacy_ngram_extractor.py  textacy_nounchunk_extractor.py  textacy_term_extractor.py  textacy_triple_extractor.py
buildowl/autotaxo/dto/: __init__.py  fuzzywuzzy_wrapper.py  spacy_model.py  stopwords_kb.py
buildowl/autotaxo/svc/: __init__.py  extract_keyterms.py  extract_textacy_keyterms.py  extract_textacy_ngrams.py  extract_textacy_nouns_chunks.py  filter_keyterms.py  (+3 more)
tests/: test_buildowl.py
(+21 files in other folders)
