[tool.poetry]
authors = ["Craig Trim <craig.trim@causalitylink.com>"]
description = "Tools for Automating the Construction of an Ontology (OWL)"
name = "buildowl"
version = "0.1.0"

[tool.poetry.dependencies]
baseblock = "0.1.4"
fuzzywuzzy = "^0.18.0"
nltk = "^3.7"
openai = "^0.20.0"
pandas = "^1.4.0"
python = "3.8.5"
rdflib = "^6.1.1"
regex = "2022.7.9"
spacy = "3.3"
tabulate = "0.8.10"
textacy = "0.12.0"
textblob = "^0.17.1"

[tool.poetry.dev-dependencies]
autopep8 = "*"
pytest = "*"

[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.3.0/en_core_web_sm-3.3.0.tar.gz"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
